--- a/app/views/destinations/confirmation.html.erb
+++ b/app/views/destinations/confirmation.html.erb
@@ -1,2 +1,6 @@
-<h1>Destinations#confirmation</h1>
-<p>Find me in app/views/destinations/confirmation.html.erb</p>
+<h4> You're all set! </h4>
+
+
+Thanks, <% @user.username %> ! You've been registerd and auto-logged in...sweet eh?
+
+<li><a href="/">Return Home</a></li>
